# compilers_for_course

./: .gitignore  CMakeLists.txt  CMake_notes.md  Makefile  README.md  a.out  compiler_lab01.c  data_ex01.c  data_week3_ex01.cpp  data_week3_ex02.cpp  data_week4_ex01.cpp  data_week4_ex02.cpp  data_week4_ex03.cpp  demo  demo.cpp  demo.cpp.html  dm.h  elim_rec.h  grammar.cpp  grammar.h  grammar.txt  grammar1.txt  grammer.cpp  grammer.h  lab01  lab01.cpp  lab02  lab02.cpp  lab03  lab03.cpp  lab04  lab04.cpp  lab04.cpp.bak  lab05  lab05.cpp  lab3.md  lab4.md  lab5.md  lex.h  lex1  (+10 more)
notes/: CMake_notes.md  Makefile  lec05.md  lec06.md  lec07.md  lec08.md  lec10.md  lec11.md  lec12.md  lec13.md  lec14.md
res/: grammar1.txt  grammar2.txt  grammar4.txt  read.txt
